--- a/projects/osloprompt/index.html
+++ b/projects/osloprompt/index.html
@@ -427,7 +427,10 @@
     </code></pre>
   </div>
 </section>
-
+<div style="clear: both;">&nbsp;</div>
+  <div align="center">
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=94PcUxgB82MrE1ZEBA_J6xbHnRx0Tc9oO_ry3VIZJgE&cl=ffffff&w=a"></script>
+  </div>
 
 <footer class="footer">
   <div class="container">
