--- a/projects/osloprompt/index.html
+++ b/projects/osloprompt/index.html
@@ -429,7 +429,7 @@
 </section>
 <div style="clear: both;">&nbsp;</div>
   <div align="center">
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=94PcUxgB82MrE1ZEBA_J6xbHnRx0Tc9oO_ry3VIZJgE&cl=ffffff&w=a"></script>
+    <a href='https://clustrmaps.com/site/1c1ar'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.js?d=94PcUxgB82MrE1ZEBA_J6xbHnRx0Tc9oO_ry3VIZJgE&cl=ffffff&w=a'/></a>
   </div>
 
 <footer class="footer">
