--- a/projects/osloprompt/index.html
+++ b/projects/osloprompt/index.html
@@ -429,7 +429,7 @@
 </section>
 <div style="clear: both;">&nbsp;</div>
   <div align="center">
-    <a href='https://clustrmaps.com/site/1c1ar'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.js?d=94PcUxgB82MrE1ZEBA_J6xbHnRx0Tc9oO_ry3VIZJgE&cl=ffffff&w=a'/></a>
+    <a href="https://clustrmaps.com/site/1c4wz"  title="ClustrMaps"><img src="//www.clustrmaps.com/map_v2.png?d=94PcUxgB82MrE1ZEBA_J6xbHnRx0Tc9oO_ry3VIZJgE&cl=ffffff" /></a>
   </div>
 
 <footer class="footer">
