--- a/projects/osloprompt/index.html
+++ b/projects/osloprompt/index.html
@@ -414,7 +414,7 @@
 </section> -->
 
 
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{hassan2025osloprompt,
@@ -426,7 +426,7 @@
     }
     </code></pre>
   </div>
-</section>
+</section> -->
 <div style="clear: both;">&nbsp;</div>
   <div align="center">
     <a href="https://clustrmaps.com/site/1c4wz"  title="ClustrMaps"><img src="//www.clustrmaps.com/map_v2.png?d=94PcUxgB82MrE1ZEBA_J6xbHnRx0Tc9oO_ry3VIZJgE&cl=ffffff" /></a>
