--- a/projects/osloprompt/index.html
+++ b/projects/osloprompt/index.html
@@ -90,12 +90,12 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2503.16106"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (Coming soon!!!)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Video Link. -->
